--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
         }
 
         .stars {
-            background: #000 url(https://i.postimg.cc/hhFD7Nkf/apps-47636-13819498107583324-fb06b53a-4974-4acb-85e6-f6f363f85ab6-edec48d0-ec35-4a1f-8bf5-c455987b4a.png) repeat top center;
+            background: #000 url(https://raw.githubusercontent.com/naruto88888/14fevralyaa/main/foto/nebo.png) repeat top center;
             z-index: -6000;
         }
 
         .twinkling {
-            background-image: url(https://i.postimg.cc/CLpNr4PF/twinkling.png);
+            background-image: url(https://raw.githubusercontent.com/naruto88888/14fevralyaa/main/foto/twinkling.png);
             animation: 3s twinkle infinite;
             animation-timing-function: linear;
             z-index: -6000;
